document security fixes from 2.6.31 and 2.6.31.x (more to come)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14309 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -121,7 +121,16 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
   * Disable PROM console support (Closes: #525958)
   * Make the description of linux-support a little more verbose
     (Closes: #400825)
-
+  * This upload fixes the following security issues:
+    - CVE-2009-3290 (2.6.31)	
+    - CVE-2009-3288 (2.6.31.1)	
+    - CVE-2009-3280 (2.6.31.1)
+    - CVE-2009-3234 (2.6.31.1)
+    - CVE-2009-3043 (2.6.31)
+    - CVE-2009-3002 (2.6.31)
+    - CVE-2009-3001 (2.6.31)
+    - CVE-2009-2844 (2.6.31)
+   
   [ dann frazier ]
   * n_tty: Fix echo race
   * [ia64] Stop disabling CONFIG_HOTPLUG_CPU, which was blocking
