--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -20,6 +20,7 @@ linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
 
   [ maximilian attems ]
   * Add stable release 2.6.31.2
+    - ax25: Fix signed comparison in the sockopt handler (CVE-2009-2909)
     - PM / yenta: Fix cardbus suspend/resume regression (Closes: #522828)
 
   [ dann frazier ]
