* Add stable release 2.6.32.1:   - ext4: Fix insufficient checks in EXT4_IOC_MOVE_EXT (CVE-2009-4131)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14786 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -23,6 +23,10 @@ linux-2.6 (2.6.32-2) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * Add support for the sparc64 architecture.
 
+  [ dann frazier ]
+  * Add stable release 2.6.32.1:
+    - ext4: Fix insufficient checks in EXT4_IOC_MOVE_EXT (CVE-2009-4131)
+
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 13 Dec 2009 13:25:45 +0100
 
 linux-2.6 (2.6.32-1) unstable; urgency=low
