--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -12,6 +12,9 @@ linux-2.6 (2.6.36-1~experimental.2) UNRELEASED; urgency=low
     has stalled and is a source of security bugs.
   * Disable Econet protocol.  It is unmaintained upstream, probably broken,
     and of historical interest only.
+  * af_802154,rds: Disable auto-loading as mitigation against local exploits.
+    These protocol modules are not widely used and can be explicitly loaded
+    or aliased on systems where they are wanted.
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
