decnet: Disable auto-loading as mitigation against local exploits
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16571 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/patches/series/1~experimental.2
+++ b/linux-2.6/debian/patches/series/1~experimental.2
@@ -1,2 +1,3 @@
 + debian/af_802154-Disable-auto-loading-as-mitigation-against.patch
 + debian/rds-Disable-auto-loading-as-mitigation-against-local.patch
++ debian/decnet-Disable-auto-loading-as-mitigation-against-lo.patch
