rsync with 2.6.38-5 changes
this add the per arch abi feature.
the m68k and security patches seem all merged.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17346 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -65,6 +65,55 @@ linux-2.6 (2.6.39~rc4-1~experimental.1) experimental; urgency=low
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 24 Apr 2011 03:21:31 +0100
 
+linux-2.6 (2.6.38-5) unstable; urgency=medium
+
+  [ Thorsten Glaser ]
+  * [m68k] atari: Enable and compile in generic RTC
+  * [m68k] Backport the most urgent fixes from 2.6.39
+    - Add helper functions to handle kernel faults, traps and
+      exceptions better (used by the other patches below)
+    - Add improved support for running under the ARAnyM emulator
+      (its native features interface) and emulated hardware
+      + block access (similar to virtio-block)
+      + console access (redirection to stdout)
+      + network access (Ethernet)  (Closes: #599121)
+  * [m68k] Add patch from queue fixing atarifb console output on
+    machines with a lot of FastRAM by reserving some ST-RAM early
+  * [m68k] Add patch from mm mailing list to fix SLUB breakage
+
+  [ Aurelien Jarno ]
+  * [mips/octeon] Disable CONFIG_HOTPLUG_CPU.
+
+  [ Ben Hutchings ]
+  * rt2800pci, rt2800usb: Enable experimental support for more recent
+    chips (Closes: #623808)
+  * [x86] staging: Enable EASYCAP as module (Closes: #624505)
+  * Add stable 2.6.38.5, including:
+    - p54: Initialize extra_len in p54_tx_80211
+    - nfsd4: Fix filp leak (regression introduced in 2.6.38.3)
+    - radeon: PLL tweaks for R7xx
+    - nouveau: Fix notifier memory corruption bug
+    - radeon: Fix bad shift in atom iio table parser
+    - [x86] i915: Sanitize the output registers after resume
+    - [x86] ideapad: Read brightness setting on brightness key notify
+    - ath9k_hw: Partially revert "fix dma descriptor rx error bit parsing"
+    - [s390] pfault: fix token handling
+    - ACPI/PM: Avoid infinite recurrence while registering power resources
+    - [hppa] slub: Disable use with DISCONTIGMEM && !NUMA
+    - vfs: avoid large kmalloc()s for the fdtable
+    - agp: Fix arbitrary kernel memory writes (CVE-2011-1745)
+    - agp: Fix OOM and buffer overflow (CVE-2011-1746)
+    For the complete list of changes, see:
+     http://www.kernel.org/pub/linux/kernel/v2.6/ChangeLog-2.6.38.5
+  * [hppa] Bump ABI to 2a
+  * mpt2sas: Prevent heap overflows and unchecked reads
+    (CVE-2011-1494, CVE-2011-1495)
+  * [armel] Prevent heap corruption in OABI semtimedop
+  * can: Add missing socket check in can/bcm release (CVE-2011-1598)
+  * ldm: Disable broken support for VBLK fragments (CVE-2011-1017)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 07 May 2011 21:24:55 +0100
+
 linux-2.6 (2.6.38-4) unstable; urgency=low
 
   * usb-audio: Define another USB ID for a buggy USB MIDI cable
