--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -18,6 +18,7 @@ linux-2.6 (3.1.1-1) UNRELEASED; urgency=low
   * [alpha] Remove old, broken udeb configuration
   * DFSG: Remove drivers/staging/ft1000/ft1000-*/*.img, non-free
     firmware for drivers we don't build
+  * hfs: fix hfs_find_init() sb->ext_tree NULL ptr oops (CVE-2011-2203)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 04 Nov 2011 15:05:47 +0000
 
