Restrict ioctl forwarding on partitions and logical volumes (CVE-2011-4127)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18530 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -23,6 +23,7 @@ linux-2.6 (3.2.1-1~experimental.1) UNRELEASED; urgency=low
     the fix for #649216)
   * [alpha] add io{read,write}{16,32}be functions, thanks to Michael Cree
   * net: reintroduce missing rcu_assign_pointer() calls
+  * Restrict ioctl forwarding on partitions and logical volumes (CVE-2011-4127)
 
   [ Bastian Blank ]
   * [amd64] crypt: Enable some amd64 only ciphers.
